--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 OracleEditor.php ChangeLog
 ==================================
 
+2017-08-24  Tim Strehle  <tim@strehle.de>
+
+    Changed to always use UTF-8 - non-Unicode data is not supported anymore.
+    This fixes problems when trying to read the charset from NLS_LANG, which
+    fails when using Easy Connect.
+
+2017-08-23  Tim Strehle  <tim@strehle.de>
+
+    Fixed fatal error on PHP 7. OracleEditor.php now runs fine on PHP 7.
+
 2013-08-27  Tim Strehle  <tim@strehle.de>
 
     Moved from SourceForge.net to GitHub.com.
